; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Command.c_GetHubTypeStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Command.c_GetHubTypeStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HUB_TYPE_FARM_STATIC = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"SM_HUB_STATIC\00", align 1
@HUB_TYPE_FARM_DYNAMIC = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"SM_HUB_DYNAMIC\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"SM_HUB_STANDALONE\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetHubTypeStr(i64 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @HUB_TYPE_FARM_STATIC, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32* @_UU(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %2, align 8
  br label %18

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @HUB_TYPE_FARM_DYNAMIC, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = call i32* @_UU(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  store i32* %14, i32** %2, align 8
  br label %18

15:                                               ; preds = %9
  br label %16

16:                                               ; preds = %15
  %17 = call i32* @_UU(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  store i32* %17, i32** %2, align 8
  br label %18

18:                                               ; preds = %16, %13, %7
  %19 = load i32*, i32** %2, align 8
  ret i32* %19
}

declare dso_local i32* @_UU(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
